Bug 689546 - configure --with-drivers=x11,x11alpha fails to build
Summary: configure --with-drivers=x11,x11alpha fails to build
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Build Process (show other bugs)
Version: master
Hardware: PC Linux
: P4 normal
Assignee: Chris Liddell (chrisl)
URL:
Keywords: bountiable
Depends on:
Blocks:
 
Reported: 2007-11-03 08:55 UTC by Russ Cox
Modified: 2011-01-14 16:57 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Russ Cox 2007-11-03 08:55:59 UTC
(Bug #1) If I run configure --with-drivers=x11,x11alpha then I actually get more
 than just those drivers in the Makefile:

DEVICE_DEVS1=
DEVICE_DEVS2=$(DD)x11.dev $(DD)x11alpha.dev 
DEVICE_DEVS3=
DEVICE_DEVS4=$(DD)ijs.dev
DEVICE_DEVS5=$(DD)omni.dev
DEVICE_DEVS6=$(DD)png48.dev $(DD)png16m.dev $(DD)pnggray.dev $(DD)pngmono.dev
$(DD)png256.dev $(DD)png16.dev $(DD)pngalpha.dev
DEVICE_DEVS7=$(PSD)jbig2.dev
DEVICE_DEVS8=
DEVICE_DEVS9=
DEVICE_DEVS10=
DEVICE_DEVS11=
DEVICE_DEVS12=
DEVICE_DEVS13=
DEVICE_DEVS14=
DEVICE_DEVS15=
DEVICE_DEVS16=
DEVICE_DEVS17=
DEVICE_DEVS18=
DEVICE_DEVS19=
DEVICE_DEVS20=
DEVICE_DEVS21=


(Bug #2) The omni driver is included but it refers to bmp_map_16m_rgb_color in
devbmpc.c, so it is an error to put omni into the Makefile without also adding
some color bmp driver.  Configuring --with--drivers=x11,x11alpha,bmp16 works
around the problem.
Comment 1 Ralph Giles 2007-12-29 13:26:42 UTC
Bug #1: There is a conflict between the two systems here. The output devices
that depend on third party library support enable themselves if the libraries
are available, and this list isn't merged/clipped with the list of devices
requested by --with-drivers.

Bug #2 should just be fixed by duplicating the colour mapping code inside
gdevomni.c.
Comment 2 Hin-Tak Leung 2009-12-03 05:58:46 UTC
Hmm, ./configure seems to have been totally re-worked. Now 
--with-drivers=x11,x11alpha seems to be ignored and just build to every device.
Comment 3 Hin-Tak Leung 2010-05-02 03:13:08 UTC
Grabbing a Ralph's bugs.
Comment 4 Hin-Tak Leung 2010-06-29 22:27:34 UTC
With r11461, ./configure --with-drivers=x11,x11alpha finishes building, 

bin/gs -h

   bbox cups ijs nullpage png16 png16m png256 png48 pngalpha pnggray pngmono
   svg x11 x11 x11alpha x11alpha x11cmyk x11cmyk2 x11cmyk4 x11cmyk8 x11gray2
   x11gray4 x11mono x11rg16x x11rg32x

bbox, nullpage are fairly essential and always there; We provide --disable-cups and --without-ijs so cups and ijs are probably considered "enabled by default" unless requested otherwise. 

Therefore the remaining issue is why svg and the png* devices are built, and whether they should. i.e. either document or hint that they are enabled by default, or disable them when not explicitly/implicitly requested.
Comment 5 Hin-Tak Leung 2010-08-02 00:32:29 UTC
Re-assigning bugs which still have work to do.
Comment 6 Chris Liddell (chrisl) 2011-01-14 16:57:42 UTC
Both problems fixed in r12025.