Changes to the Unix configure based builds to tidy up specifying subsets of output devices.

Some devices were always being included regardless of the options
given to configure, resolved by tidying up the macro expansions
in Makefile.in done by the configure script.

Also the page device and clist device are effectively required by
all configurations, so those are now included in the core build.

Finally, the contrib/gomni.c driver relied on two functions in
base/gdevbmpc.c which is an optional driver, so configuring
the Omni driver to be built it, and bmp16 not would result
in undefined symbols. contrib/gomni.c now has its own
equivalents of those functions.

The bbox device remains as the ultimate "fallback" device.

Bug 689546

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@12025 a1074d23-0009-0410-80fe-cf8c14f379e6